--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,10 @@ spring:
   profiles:
     include:
       - database
+      - schedule
+  lifecycle:
+    timeout-per-shutdown-phase: 3s
+
 server:
   error:
     whitelabel:
