--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,7 @@ spring:
   profiles:
     include:
       - database
+      - flyway
       - schedule
   lifecycle:
     timeout-per-shutdown-phase: 3s
