--- a/src/main/resources/application-database.yml
+++ b/src/main/resources/application-database.yml
@@ -7,12 +7,13 @@ spring:
   config.activate.on-profile: prod
 
   datasource:
-    url: jdbc:h2:tcp://localhost/~/works/h2db/lotto
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
+    driver-class-name: org.postgresql.Driver
 
   jpa:
+    database: postgresql
     properties:
       hibernate:
         show_sql: true
@@ -29,25 +30,22 @@ spring:
   config.activate.on-profile: test
 
   datasource:
-    url: jdbc:h2:tcp://localhost/~/works/h2db/test
+    url: jdbc:h2:mem:test
     username: sa
     password:
     driver-class-name: org.h2.Driver
-
+  h2:
+    console:
+      enabled: true
   jpa:
+    database: h2
     properties:
       hibernate:
         format_sql: true
-        show_sql: true
     hibernate:
-      ddl-auto: create
-
-#logging:
-#  level:
-#    org:
-#      hibernate: trace
-
-decorator:
-  datasource:
-    p6spy:
-      enable-logging: true
+      ddl-auto: validate
+    generate-ddl: off
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:sql/schema-h2.sql
